--- a/app/index.css
+++ b/app/index.css
@@ -9,6 +9,10 @@ body {
 p {
 }
 
+a {
+  
+}
+
 .container
 {
   max-width: 1200px;
@@ -52,14 +56,18 @@ li
 }
 
 .avatar {
-  width: 150px;
+  width: 200px;
   border-radius: 50%;
 }
 
 .space-list-items {
   margin-bottom: 7px;
 }
-
+.space-list-items li:nth-child(2)
+{
+  padding: 10px 0px 5px; 
+  border-top: 1px solid #95a5a6;
+}
 .languages {
   display: flex;
   justify-content: center;
@@ -78,11 +86,87 @@ li
 }
 
 .popular-item {
-  margin: 20px;
+  margin: 25px 0px;
   text-align: center;
+  padding: 20px;
+  border: 1px solid #bdc3c7;
 }
 
 .popular-rank {
   font-size: 20px;
   margin: 10px;
+}
+
+a
+{
+  color: #e74c3c;
+  text-decoration: none;
+  line-height: 150%;
+}
+
+a:hover
+{
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.active
+{
+  font-weight: bold;
+}
+
+.space-list-items,
+.space-list-items li
+{
+  margin-bottom: 5px;
+}
+
+.nav
+{
+  margin-left: 10px;
+  display: flex;
+  
+}
+
+
+.nav li 
+{
+  list-style-type: none;
+  margin: 10px;
+}
+
+.home-continer
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+.button {
+  color: #FFF;
+  background: #1abc9c;
+  display: block;
+  padding: 8px 31px;
+  text-transform: uppercase;
+  font-size: 21px;
+  margin-top: 20px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.button:hover
+{
+  background: #e74c3c;
+}
+
+.text-center
+{
+  text-align: center;
+}
+
+.site404Error
+{
+  font-weight: bold;
 }
